# dae-rs

./: .claude-code-task.md  .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG-CORR-2.md  CHANGELOG-CORR-3.md  CHANGELOG-EBPF-REFACTOR.md  CHANGELOG-SEC-1.md  CHANGELOG-TRACKING.md  Cargo.toml  DEVELOPMENT_PLAN.md  Dockerfile  EBPF_MAP_DESIGN.md  EBPF_REFACTOR_ARCH.md  IMPLEMENTATION_PLAN.md  Makefile  OUTPUT_FUNCTION_ANALYSIS.md  PRD.md  PROGRESS.md  README.md  REFACTOR_PLAN.md  REVIEW.md  REVIEW_v2.md  REVIEW_v3.md  REVIEW_v4.md  clippy.toml  docker-compose.yml  rustfmt.toml
benches/: Cargo.toml  main_bench.rs  proxy_benchmarks.rs  proxy_benchmarks_bench.rs
benches/src/: main.rs
crates/: Cargo.toml
crates/dae-api/: Cargo.toml
crates/dae-api/src/: lib.rs  server.rs  websocket.rs
crates/dae-api/src/routes/: config.rs  mod.rs  nodes.rs  rules.rs
crates/dae-cli/: Cargo.toml
crates/dae-cli/src/: lib.rs  main.rs
crates/dae-config/src/: lib.rs  rules.rs  subscription_REFACTORING_PLAN.md  tracking.rs  types.rs
crates/dae-config/src/subscription/: clash.rs  encoding.rs  mod.rs  singbox.rs  sip008.rs  uri.rs
crates/dae-core/: Cargo.toml
crates/dae-core/src/: context.rs  engine.rs  error.rs  lib.rs  result.rs  types.rs
crates/dae-ebpf/: Cargo.toml
crates/dae-ebpf-common/: Cargo.toml
crates/dae-ebpf-common/src/: stats.rs
crates/dae-ebpf-direct/src/: lib.rs
crates/dae-ebpf/dae-ebpf/: Cargo.toml
crates/dae-ebpf/dae-ebpf-common/: Cargo.toml
crates/dae-ebpf/dae-ebpf-common/src/: routing.rs  tracking.rs
crates/dae-ebpf/dae-ebpf-direct/: Cargo.toml
crates/dae-ebpf/dae-ebpf-direct/src/: lib.rs  maps.rs  sockmap.rs
crates/dae-ebpf/dae-ebpf/src/: lib.rs  maps.rs
crates/dae-ebpf/dae-tc/: Cargo.toml
crates/dae-ebpf/dae-tc/src/: lib.rs  maps.rs  packet.rs
crates/dae-ebpf/src/: lib.rs
crates/dae-protocol-core/: Cargo.toml
crates/dae-protocol-core/src/: lib.rs
crates/dae-protocol-http_proxy/: Cargo.toml
crates/dae-protocol-http_proxy/src/: auth.rs  error.rs  lib.rs  parser.rs
crates/dae-protocol-hysteria2/: Cargo.toml
crates/dae-protocol-hysteria2/src/: errors.rs  hysteria2.rs  lib.rs  mod.rs  quic.rs
crates/dae-protocol-juicity/: Cargo.toml
crates/dae-protocol-juicity/src/: codec.rs  juicity.rs  lib.rs  types.rs
crates/dae-protocol-shadowsocks/: Cargo.toml
crates/dae-protocol-shadowsocks/src/: aead.rs  config.rs  errors.rs  handler.rs  lib.rs  protocol.rs  relay.rs  request.rs  server.rs  ssr.rs
crates/dae-protocol-shadowsocks/src/plugin/: mod.rs  obfs.rs  v2ray.rs
crates/dae-protocol-socks4/: Cargo.toml
crates/dae-protocol-socks4/src/: error.rs  handler.rs  lib.rs  protocol.rs  request.rs
crates/dae-protocol-socks5/: Cargo.toml
crates/dae-protocol-socks5/src/: address.rs  auth.rs  commands.rs  consts.rs  error.rs  handler.rs  handshake.rs  lib.rs  relay.rs  reply.rs
crates/dae-protocol-trojan/: Cargo.toml
crates/dae-protocol-trojan/src/: config.rs  errors.rs  handler.rs  lib.rs  protocol.rs  server.rs  trojan_go.rs  types.rs  udp.rs
crates/dae-protocol-tuic/: Cargo.toml
crates/dae-protocol-tuic/src/: lib.rs  mod.rs
crates/dae-protocol-tuic/src/tuic/: client.rs  codec.rs  consts.rs  mod.rs  server.rs  tuic_impl.rs
crates/dae-protocol-vless/: Cargo.toml
crates/dae-protocol-vless/src/: config.rs  crypto.rs  errors.rs  handler.rs  lib.rs  protocol.rs  relay.rs  server.rs  tls.rs  types.rs
crates/dae-protocol-vmess/: Cargo.toml
crates/dae-protocol-vmess/src/: config.rs  errors.rs  handler.rs  lib.rs  protocol.rs  server.rs
crates/dae-protox-socks5/src/: handshake.rs
crates/dae-proxy/: Cargo.toml
crates/dae-proxy-core/: Cargo.toml
crates/dae-proxy-core/src/: connection.rs  connection_pool.rs  error.rs  handler.rs  lib.rs
crates/dae-proxy/src/: connection.rs  connection_pool.rs  control.rs  control_metrics.rs  control_types.rs  ebpf_check.rs  lib.rs  logging.rs  naiveproxy.rs  protocol_dispatcher.rs  protocol_legacy.rs  proxy.rs  proxy_chain.rs  socks4.rs  udp.rs
crates/dae-proxy/src/config/: hot_reload.rs
crates/dae-proxy/src/core/: context.rs  error.rs  mod.rs
crates/dae-proxy/src/dns/: loop_detection.rs  mac_dns.rs  mod.rs
crates/dae-proxy/src/ebpf_integration/: checks.rs  config.rs  diagnostics.rs  errors.rs  maps.rs  metrics.rs  mod.rs
crates/dae-proxy/src/http_proxy/: auth.rs  mod.rs
crates/dae-proxy/src/hysteria2/: mod.rs
crates/dae-proxy/src/juicity/: codec.rs  config.rs  juicity.rs  mod.rs  types.rs
crates/dae-proxy/src/mac/: matcher.rs  mod.rs  oui.rs  oui_data.rs
crates/dae-proxy/src/metrics/: counter.rs  gauge.rs  histogram.rs  mod.rs  prometheus.rs  tracking.rs
crates/dae-proxy/src/nat/: full_cone.rs
crates/dae-proxy/src/node/: hash.rs  health.rs  manager.rs  mod.rs  node.rs  selector.rs  simple.rs  store.rs
crates/dae-proxy/src/process/: mod.rs  resolver.rs
crates/dae-proxy/src/protocol/: handler.rs  mod.rs  relay.rs  simple_handler.rs  unified_handler.rs
crates/dae-proxy/src/proxy/: coordinator.rs  dispatcher.rs  lifecycle.rs  mod.rs
crates/dae-proxy/src/rule_engine/: engine.rs  mod.rs
crates/dae-proxy/src/rules/: builder.rs  capability.rs  dns.rs  domain.rs  ip.rs  mod.rs  process.rs  types.rs
crates/dae-proxy/src/shadowsocks/: aead.rs  config.rs  handler.rs  mod.rs  protocol.rs  relay.rs  ssr.rs  ssr_types.rs
crates/dae-proxy/src/socks4/: handler.rs  mod.rs  protocol.rs
crates/dae-proxy/src/socks5/: address.rs  auth.rs  handshake.rs  mod.rs  relay.rs  reply.rs
crates/dae-proxy/src/tracking/: constants.rs  mod.rs  store.rs  types.rs
crates/dae-proxy/src/transport/: grpc.rs  httpupgrade.rs  mod.rs  tcp.rs
crates/dae-proxy/tests/: e2e_proxy_tests.rs  integration_tests.rs  tracking_integration_tests.rs
crates/dae-relay/: Cargo.toml
crates/dae-relay/src/: lib.rs
crates/dae-tc/: Cargo.toml  build.rs
crates/dae-tc/src/: constants.rs  lib.rs  maps.rs  packet.rs
crates/dae-transport/: Cargo.toml
crates/dae-transport/src/: grpc.rs  httpupgrade.rs  lib.rs  meek.rs  tcp.rs  tls.rs  traits.rs  ws.rs
crates/dae-xdp/src/: lib.rs
(+184 files in other folders)
