[workspace]
resolver = "2"
members = [
    "packages/dae-core",
    "packages/dae-cli",
    "packages/dae-config",
    "packages/dae-proxy",
    "packages/dae-api",
    "packages/dae-ebpf/dae-ebpf-common",
    "packages/dae-ebpf/dae-xdp",
    "packages/dae-ebpf/dae-ebpf",
    "packages/dae-ebpf/dae-ebpf-direct",
    "benches",
]

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
