[workspace]
resolver = "2"
members = [
    "crates/dae-core",
    "crates/dae-cli",
    "crates/dae-config",
    "crates/dae-proxy",
    "crates/dae-api",
    "crates/dae-ebpf/dae-ebpf-common",
    "crates/dae-ebpf/dae-xdp",
    "crates/dae-ebpf/dae-tc",
    "crates/dae-ebpf/dae-ebpf",
    "crates/dae-ebpf/dae-ebpf-direct",
    "benches",
]

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
