[workspace]
resolver = "2"
members = [
    "crates/dae-core",
    "crates/dae-cli",
    "crates/dae-config",
    "crates/dae-proxy",
    "crates/dae-api",
    "crates/dae-ebpf-common",
    "crates/dae-xdp",
    "crates/dae-tc",
    "crates/dae-ebpf",
    "crates/dae-ebpf-direct",
    "crates/dae-protocol-socks4",
    "crates/dae-protocol-socks5",
    "crates/dae-protocol-http_proxy",
    "crates/dae-protocol-hysteria2",
    "crates/dae-protocol-juicity",
    "crates/dae-protocol-shadowsocks",
    "crates/dae-protocol-trojan",
    "crates/dae-protocol-tuic",
    "benches",
]

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
