[package]
name = "dae-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["full"] }
dae-proxy = { path = "../crates/dae-proxy" }

[[bench]]
name = "main_bench"
harness = false
path = "main_bench.rs"

[[bench]]
name = "proxy_benchmarks_bench"
harness = false
path = "proxy_benchmarks_bench.rs"
