[workspace]
resolver = "2"
members = [
    "dae-core",
    "dae-proxy-core",
    "dae-protocol-shadowsocks",
    "dae-protocol-socks4",
    "dae-protocol-socks5",
    "dae-protocol-trojan",
    "dae-protocol-vless",
    "dae-protocol-vmess",
    "dae-transport",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
bytes = "1"
