[package]
name = "dae-api"
version = "0.1.0"
edition = "2021"
description = "REST API server for dae-rs"
publish = false

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
