[package]
name = "dae-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for dae-rs"

[features]
default = []
api = ["dep:dae-api"]

[dependencies]
dae-core = { path = "../dae-core" }
dae-proxy = { path = "../dae-proxy" }
dae-config = { path = "../dae-config" }
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# REST API (optional - enable with --features api)
dae-api = { path = "../dae-api", optional = true }

# Only include REST API dependencies when api feature is enabled
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
thiserror = { version = "1.0", optional = true }

[dev-dependencies]
assert_cmd = "2"
