[package]
name = "dae-core"
version = "0.1.0"
edition = "2021"
description = "Shared core types for dae-rs"

[dependencies]
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
