[package]
name = "dae-core"
version = "0.1.0"
edition = "2021"
description = "Shared core types for dae-rs"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { version = "1", features = ["derive"] }
bytes = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
