[package]
name = "dae-protocol-http_proxy"
version = "0.1.0"
edition = "2021"
description = "HTTP CONNECT proxy protocol handler for dae-rs"

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
tracing = "0.1"
subtle = "2"
thiserror = "1"
dae-relay = { path = "../dae-relay" }

[dev-dependencies]
tokio-test = "0.4"
