[package]
name = "dae-protocol-hysteria2"
version = "0.1.0"
edition = "2021"
description = "Hysteria2 protocol handler for dae-rs"

[features]
default = []
# QUIC support is no longer implemented - feature kept for backward compatibility
quic = []

[dependencies]
tokio = { version = "1", features = ["io-util", "net", "rt"] }
tracing = "0.1"
thiserror = "1"
rand = "0.8"
dae-protocol-core = { path = "../dae-protocol-core" }
dae-relay = { path = "../dae-relay" }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
