[package]
name = "dae-protocol-shadowsocks"
version = "0.1.0"
edition = "2021"
description = "Shadowsocks AEAD protocol implementation for dae-rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
bytes = "1"
thiserror = "1"
tracing = "0.1"

# Internal dependencies
dae-core = { path = "../dae-core" }
dae-proxy-core = { path = "../dae-proxy-core" }
dae-transport = { path = "../dae-transport" }

[dev-dependencies]
tokio-test = "0.4"
