[package]
name = "dae-protocol-shadowsocks"
version = "0.1.0"
edition = "2021"
description = "Shadowsocks protocol handler for dae-rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
aes-gcm = "0.10"
hkdf = "0.10"
subtle = "2"
futures-util = "0.3"
tokio-tungstenite = "0.21"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
