[package]
name = "dae-protocol-trojan"
version = "0.1.0"
edition = "2021"
description = "Trojan protocol implementation for dae-rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
bytes = "1"
thiserror = "1"
tracing = "0.1"
subtle = "2"

# Internal dependencies
dae-core = { path = "../dae-core" }
dae-proxy-core = { path = "../dae-proxy-core" }
dae-transport = { path = "../dae-transport" }

[dev-dependencies]
tokio-test = "0.4"
