[package]
name = "dae-protocol-trojan"
version = "0.1.0"
edition = "2021"
description = "Trojan protocol handler for dae-rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
aes-gcm = "0.10"
hkdf = "0.10"
subtle = "2"
tokio-tungstenite = "0.21"
futures-util = "0.3"
tungstenite = "0.21"
dae-relay = { path = "../dae-relay" }
dae-protocol-core = { path = "../dae-protocol-core" }

[dev-dependencies]
tokio-test = "0.4"
