[package]
name = "dae-protocol-vmess"
version = "0.1.0"
edition = "2021"
description = "VMess AEAD-2022 protocol implementation for dae-rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
bytes = "1"
thiserror = "1"
tracing = "0.1"

# dae-proxy-core for Handler trait
dae-proxy-core = { path = "../dae-proxy-core" }

# Cryptography
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
