[package]
name = "dae-protocol-vmess"
version = "0.1.0"
edition = "2021"
description = "VMess protocol handler for dae-rs"

[dependencies]
tokio = { version = "1", features = ["io-util", "net", "time", "rt"] }
tracing = "0.1"
async-trait = "0.1"
bytes = "1"
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
dae-relay = { path = "../dae-relay" }
dae-protocol-core = { path = "../dae-protocol-core" }
thiserror = "1"

[dev-dependencies]
tokio-test = "0.4"
