[package]
name = "dae-proxy-core"
version = "0.1.0"
edition = "2021"
description = "Core proxy functionality for dae-rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
socket2 = { version = "0.5", features = ["all"] }
bytes = "1"
rand = "0.8"
futures = "0.3"
dae-core = { path = "../dae-core" }
ipnet = "2"
maxminddb = "0.27"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
