[package]
name = "dae-proxy"
version = "0.1.0"
edition = "2021"
description = "Proxy protocols for dae-rs - Phase 3: User-space proxy core"

[features]
# Feature flags for optional compilation
# Currently all protocols are always compiled due to deep module dependencies
# Future work: gate individual protocols with proper cfg attributes throughout codebase
default = []
protocol-core = []
transport-tcp = []
transport-tls = []
transport-ws = []
transport-grpc = []
transport-httpupgrade = []
transport-meek = []
transport-quic = []
vless = []
vmess = []
shadowsocks = []
trojan = []
socks4 = []
hysteria2 = []
tuic = []
juicity = []

[dependencies]
# Always included (core)
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
socket2 = { version = "0.5", features = ["all"] }
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dae-ebpf-common = { path = "../dae-ebpf/dae-ebpf-common" }
dae-config = { path = "../dae-config" }
clap = { version = "4", features = ["derive"] }
ipnet = "2"
maxminddb = "0.27"
notify = "7"
toml = "0.8"
async-trait = "0.1"
tokio-tungstenite = "0.21"
futures-util = "0.3"
tungstenite = "0.21"
bytes = "1"
rand = "0.8"
futures = "0.3"
glob = "0.3"
curve25519-dalek = { version = "4", features = ["rand_core"] }
rand_core = "0.6"
hmac = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
hkdf = "0.10"
bitflags = "2"
tokio-tun = "0.9"
subtle = "2"

# Metrics and observability
prometheus = "0.13"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
lazy_static = "1.4"

# QUIC protocol support
quinn = "0.10"

# eBPF support via aya (async runtime integration)
# Note: aya 0.13+ requires nightly Rust for eBPF compilation,
# but the user-space API works on stable Rust.
aya = "0.13"
aya-log = "0.1"
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
