[package]
name = "dae-transport"
version = "0.1.0"
edition = "2021"
description = "Transport layer implementations for dae-rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"
bytes = "1"
futures-util = "0.3"
url = "2"

# TLS support (optional - enable when needed)
# native-tls = "0.2"
# rustls = { version = "0.23", default-features = false }

dae-core = { path = "../dae-core" }

[dev-dependencies]
tokio-test = "0.4"
