[package]
name = "dae-ebpf-direct"
version = "0.1.0"
edition = "2021"
description = "Direct Socket eBPF programs for dae-rs - sockops and sk_msg based transparent proxy"
authors = ["dae-rs team"]

[dependencies]
aya-ebpf = "0.1"
dae-ebpf-common = { path = "../dae-ebpf-common" }
bitflags = "2.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
