[package]
name = "dae-ebpf"
version = "0.1.0"
edition = "2021"
description = "User-space eBPF loader for dae-rs"
authors = ["dae-rs team"]

[dependencies]
aya = "0.13"
aya-ebpf = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dae-ebpf-common = { path = "../dae-ebpf-common" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
